data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4185.wast
;; 4. **Test for Invalid Table Entry Handling in Loop**:    Create a situation where the `call_indirect` points to an invalid entry in the table (e.g., a `null` reference). Embed this in a loop with a `br` instruction incorrectly implemented such that it always jumps back to the start, leading to an infinite loop instead of trapping.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (func $test
      (loop
        (call_indirect (type 0) (i32.const 1))
        (br 0)
      )
    )
  )
  "invalid table entry handling within a loop"
)